SUBDIRS = application-api-guide helper-guide platform-api-guide

if user_guide
SUBDIRS += implementers-guide users-guide process-guide
endif

EXTRA_DIST = \
	   $(top_srcdir)/doc/doxygenlayout.xml \
	   $(top_srcdir)/doc/odpdoxygen.css \
	   $(top_srcdir)/doc/glossary.adoc \
	   $(top_srcdir)/doc/Doxyfile_common
