SUBDIRS = classifier \
	  debug \
	  generator \
	  hello \
	  ipsec_api \
	  ipsec_crypto \
	  ipsec_offload \
	  l2fwd_simple \
	  l3fwd \
	  packet \
	  ping \
	  simple_pipeline \
	  switch \
	  sysinfo \
	  time \
	  timer \
	  traffic_mgmt

if HAVE_DW_ATOMIC_CMP_EXC
SUBDIRS += ipfragreass
endif
